--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,53 @@
-*
+.logo
 {
-    margin: 0;
-    padding: 0;
+    width: 40px;
+    height: 40px;
 }
 
-#header
+.nav-bg
 {
-    text-align: center;
+    background-color: #6eb0db !important
 }
 
+.footer
+{
+    background-color: #2a59c0 !important  
+}
+
+.right{
+    float: right;
+}
+
+.left{
+    float: left;
+}
+
+.form-signin {
+    width: 100%;
+    max-width: 330px;
+    padding: 15px;
+    margin: auto;
+  }
+  .form-signin .checkbox {
+    font-weight: 400;
+  }
+  .form-signin .form-control {
+    position: relative;
+    box-sizing: border-box;
+    height: auto;
+    padding: 10px;
+    font-size: 16px;
+  }
+  .form-signin .form-control:focus {
+    z-index: 2;
+  }
+  .form-signin input[type="email"] {
+    margin-bottom: -1px;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+  .form-signin input[type="password"] {
+    margin-bottom: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+  }
