--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,37 @@
     border-top-right-radius: 0;
   }
 
+  .form-signup {
+    width: 100%;
+    max-width: 400px;
+    padding: 15px;
+    margin: auto;
+  }
+  .form-signup .checkbox {
+    font-weight: 400;
+  }
+  .form-signup .form-control {
+    position: relative;
+    box-sizing: border-box;
+    height: auto;
+    padding: 10px;
+    font-size: 16px;
+  }
+  .form-signup .form-control:focus {
+    z-index: 2;
+  }
+  .form-signup input[type="email"] {
+    margin-bottom: -1px;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+  .form-signup input[type="password"] {
+    margin-bottom: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+  }
+
+
   /* Start Menu  Responsive*/
 
   label{
@@ -85,3 +116,13 @@
     }
   }
   /* End Menu Responsive */
+
+  .bg-reg{
+    background-color: #e9ecef
+  }
+
+  .reg{
+    width: 100%;
+    height: 100%;
+    bottom: 0;
+  }
