--- a/css/main.css
+++ b/css/main.css
@@ -132,5 +132,15 @@ video{
 }
 
 #canvas{
-  display: none
+  display: none;
+}
+.thum img {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 10px;
+  width: 150px;
+}
+
+.thum img:hover {
+  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
 }
